# dbt-personal

./: .envrc  dbt_project.yml  docker-compose.yaml  pyproject.toml
db/: Dockerfile
dbt_profile/: .user.yml  profiles.yml
macros/: jira.sql  jira_config.sql  jira_pagination.sql  json_expr.sql
macros/materialization/: function.sql
macros/materializations/: function.sql
macros/utils/: jira_fields.sql  with_prefix.sql
models/: jira_issues.sql
models/functions/: _http.sql  http.sql  jira_paginate.sql  run.sql
models/gmail/: gmail_header_fn.sql  gmail_starred_emails.sql
models/jira/: jira_open_issues.sql  jira_open_issues_trigger_fn.sql  jira_paginate_fn.sql
models/relations/: jira_issues.sql
models/utils/: http_fn.sql
