[tool.poetry]
name = "dbt-personal"
version = "0.1.0"
description = ""
authors = ["Tim Vergenz <vergenzt@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dbt_personal"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.4.5"
dbt-postgres = "^1.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
